-*- text -*-

* The linker script has a new command to insert a timestamp
  TIMESTAMP
  inserts the current time (seconds since Epoch) as a 64-bit value

* The linker script syntax has new commands for debugging a linker script
  DEBUG ON  turns on debugging
  DEBUG OFF turns off debugging

* The linker script syntax has new commands for handling CRC-32/64 calculations
  on the '.text' section
  It uses code from https://www.libcrc.org/

  DIGEST "<label>[#<endian>]" "CRC32"              (start, end)
  DIGEST "<label>[#<endian>]" "CRC64-ECMA"         (start, end)
  DIGEST "<label>[#<endian>]" "CRC64-GO-ISO"       (start, end)
  DIGEST "<label>[#<endian>]" "CRC64-GO-ISO-R"     (start, end)
  DIGEST "<label>[#<endian>]" "CRC64-WE"           (start, end)
  DIGEST "<label>[#<endian>]" "CRC64-XZ"           (start, end)
  DIGEST "<label>[#<endian>]"  POLY (<params>)     (start, end)
  DIGEST TABLE "<label>[#<endian>]"

  The CRC32, CRC64-ECMA, CRC64-ISO, CRC64-WE and POLY defines
  the polynome to use and reserves space for the 32/64-bit CRC in the
  current section (default ".text"). It also defines a label "<label>".
  The endian can be specified through "#BE" or "#LE" modifiers for
  big endian or little endian. This overrides the "-BE" or "-LE" switches on the
  command line. If no specification is used, little endian
  digest and table will be emitted.
  The generated label does not include the modifier.

  When generating a custom polynome you have to supply parameters
  in the  following order
  * size            {32 | 64 }
  * polynome
  * initial         initial value of crc
  * xor value       xor with this before returning result
  * input reflect   bitreverse input data
  * output reflect  bitreverse result
  * reciprocal      bitreverse polynome

  These terms are explained at
  http://www.sunshine2k.de/articles/coding/crc/understanding_crc.html

  The 32 bit DIGEST <polynome> command defines some global symbols.