@@ -1,5 +1,8 @@
 -*- text -*-
 
+* The DIGEST feature is broken when 32-bit BFDs are used.
+  Disable 64-bit CRCs when BFD64 is not defined.
+
 * The linker script has a new command to insert a timestamp
   TIMESTAMP
   inserts the current time (seconds since Epoch) as a 64-bit value
